--- a/detecting_covid19_severity.ipynb
+++ b/detecting_covid19_severity.ipynb
@@ -6,7 +6,7 @@
       "name": "detecting_covid19_severity.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSO/hJz3HzPgDWP0n6yhD1",
+      "authorship_tag": "ABX9TyNoPgrB1Oejlqr1v1i4vk/D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3168,8 +3168,8 @@
         "colab_type": "text"
       },
       "source": [
-        "Using the `Don't Repeat Yourself (DRY)` Paradigm, we shall attempt to create a machine learning Pipeline using `CASH` tools like `LALE` (Language for Automated Learning Explorartion) or `AutoSklearn`. \n",
-        "<br>CASH stands for _Combined Algorithm Selection and Hyper-paramters Optimisation technique_"
+        "Using the `Don't Repeat Yourself (DRY)` Paradigm, we shall attempt to create a machine learning Pipeline using `CASH` tools like `LALE` (Language for Automated Learning Explorartion). \n",
+        "<br>CASH stands for _Combined Algorithm Selection and Hyper-parameters Optimisation technique_"
       ]
     },
     {
@@ -4411,7 +4411,7 @@
         "colab_type": "text"
       },
       "source": [
-        "For the y_train and y_val arrays, we need to convert them from Rank 1 arrays to proper arrays using the np.newaxis method, before we can vstack them. Then after vstacking them we flatten it back to Rank 1 array for modelling."
+        "For the y_train and y_val arrays, we need to convert them from Rank 1 arrays of shape in the form of (17000,) to proper arrays with shape in form of (17000, 1) using the np.newaxis method, before we can vstack them. Then after vstacking them we flatten it back to Rank 1 array for modelling."
       ]
     },
     {
@@ -4799,17 +4799,270 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3qCH8j4_xDv0",
+        "colab_type": "text"
+      },
+      "source": [
+        "One of the most basic questions we might ask of a model is: What features have the biggest impact on predictions? <br>_Permutation importance (PI)_ answers this question by randomly shuffling a single column of the validation data, leaving the target and all other columns in place, and measuring how that affects accuracy of predictions. _PI_ does this random reshuffling on all features and measures which ones cause the biggest change in prediction, these are the ones that are most important to the model.\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hZYJ6KAKytCv",
+        "colab_type": "text"
+      },
+      "source": [
+        "Let's apply Permutaion importance to see which features have most impact on our model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "K0Q3qeVUlwdC",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 202
+        },
+        "outputId": "e36abf7d-68e5-46a7-fcd3-2ac6d488004e"
       },
       "source": [
-        ""
+        "# First import a few libraries\n",
+        "! pip install eli5\n",
+        "import eli5\n",
+        "from eli5.sklearn import PermutationImportance"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: eli5 in /usr/local/lib/python3.6/dist-packages (0.10.1)\n",
+            "Requirement already satisfied: numpy>=1.9.0 in /usr/local/lib/python3.6/dist-packages (from eli5) (1.18.3)\n",
+            "Requirement already satisfied: graphviz in /usr/local/lib/python3.6/dist-packages (from eli5) (0.10.1)\n",
+            "Requirement already satisfied: attrs>16.0.0 in /usr/local/lib/python3.6/dist-packages (from eli5) (19.3.0)\n",
+            "Requirement already satisfied: jinja2 in /usr/local/lib/python3.6/dist-packages (from eli5) (2.11.2)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from eli5) (1.4.1)\n",
+            "Requirement already satisfied: tabulate>=0.7.7 in /usr/local/lib/python3.6/dist-packages (from eli5) (0.8.7)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from eli5) (1.12.0)\n",
+            "Requirement already satisfied: scikit-learn>=0.18 in /usr/local/lib/python3.6/dist-packages (from eli5) (0.22.2.post1)\n",
+            "Requirement already satisfied: MarkupSafe>=0.23 in /usr/local/lib/python3.6/dist-packages (from jinja2->eli5) (1.1.1)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.18->eli5) (0.14.1)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BR0hKLNLzJR5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "b9f1b73a-1d41-4d5c-8642-177aa5a38cb3"
+      },
+      "source": [
+        "# Next, let's instantiate the PemuatationImportance object\n",
+        "perm = PermutationImportance(xgb_model, random_state=1).fit(x_test, y_test)\n",
+        "\n",
+        "# Let's show the weights of features in the data set\n",
+        "eli5.show_weights(perm, feature_names = list(diabetes_df.columns[:-1]) )"
+      ],
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "    <style>\n",
+              "    table.eli5-weights tr:hover {\n",
+              "        filter: brightness(85%);\n",
+              "    }\n",
+              "</style>\n",
+              "\n",
+              "\n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "        <table class=\"eli5-weights eli5-feature-importances\" style=\"border-collapse: collapse; border: none; margin-top: 0em; table-layout: auto;\">\n",
+              "    <thead>\n",
+              "    <tr style=\"border: none;\">\n",
+              "        <th style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">Weight</th>\n",
+              "        <th style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">Feature</th>\n",
+              "    </tr>\n",
+              "    </thead>\n",
+              "    <tbody>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 80.00%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.1499\n",
+              "                \n",
+              "                    &plusmn; 0.0087\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                Pregnancies\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 90.23%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.0539\n",
+              "                \n",
+              "                    &plusmn; 0.0118\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                Age\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 92.87%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.0343\n",
+              "                \n",
+              "                    &plusmn; 0.0063\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                BMI\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 94.47%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.0239\n",
+              "                \n",
+              "                    &plusmn; 0.0059\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                SerumInsulin\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 94.62%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.0230\n",
+              "                \n",
+              "                    &plusmn; 0.0013\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                PlasmaGlucose\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 95.79%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.0162\n",
+              "                \n",
+              "                    &plusmn; 0.0049\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                TricepsThickness\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 97.58%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.0073\n",
+              "                \n",
+              "                    &plusmn; 0.0029\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                DiastolicBloodPressure\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "        <tr style=\"background-color: hsl(120, 100.00%, 98.45%); border: none;\">\n",
+              "            <td style=\"padding: 0 1em 0 0.5em; text-align: right; border: none;\">\n",
+              "                0.0039\n",
+              "                \n",
+              "                    &plusmn; 0.0012\n",
+              "                \n",
+              "            </td>\n",
+              "            <td style=\"padding: 0 0.5em 0 0.5em; text-align: left; border: none;\">\n",
+              "                DiabetesPedigree\n",
+              "            </td>\n",
+              "        </tr>\n",
+              "    \n",
+              "    \n",
+              "    </tbody>\n",
+              "</table>\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "    \n",
+              "\n",
+              "\n",
+              "\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 98
+        }
+      ]
     }
   ]
 }
